# envio-faturas-selenium

./: .gitignore  README.md  pyproject.toml
core/: main.py
core/services/: downloader.py  get_user_data.py  web_driver.py
core/src/: config.py  main.py
core/src/services/: downloader.py  get_user_data.py  send_whatsapp.py
src/faturas_whatsapp/: config.py  main.py
src/faturas_whatsapp/services/: downloader.py  pdf_extractor.py  printer.py  send_whatsapp.py  web_driver.py
